fixing general aligns

--- a/styling/dashStyles.css
+++ b/styling/dashStyles.css
@@ -53,7 +53,8 @@
 }
 
 .tabcontent {
-    display: block;
+    display:flex;
+    flex-direction: column;
     color: #324373;
     background-color:#F7F0DD;
     border-radius: 25px;
@@ -103,7 +104,7 @@
   }
 
   .modal-span{
-    /* display: flex; */
+    display: flex;
     justify-content: space-between;
     padding-left: 5%;
     padding-right: 10%;
